<resources>
    <string name="app_name">Badminton Umpire Helper</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="team">Team</string>
    <string name="start_match">Start Match</string>
    <string name="single">Single</string>
    <string name="double_match">Double</string>
    <string name="tournament_game">Tournament</string>
    <string name="team_game">Team competition</string>
    <string name="vs">vs.</string>
    <string name="coinflip">Toss</string>
    <string name="head">Head</string>
    <string name="tails">Tails</string>
    <string name="won_coinflip">won the toss</string>
    <string name="takes_serve">Serve</string>
    <string name="takes_accept">Receive</string>
    <string name="takes_left">left side</string>
    <string name="Takes_left">Left side</string>
    <string name="takes_right">right side</string>
    <string name="Takes_right">Right side</string>
    <string name="match_start_wording_single_non_team">
        Ladies and gentlemen: on my right %s, and on my left %s. %s to serve. Love all.
        Play.
    </string>
    <string name="match_start_wording_double_non_team">
        Ladies and gentlemen: on my right %s and %s, and on my left %s and %s.
        %s to serve to %s. Love all.
        Play.
    </string>
    <string name="match_start_wording_single_team">
        Ladies and gentlemen: on my right %s, represented by %s, and on my left %s, represented by %s. %s to serve. Love all.
        Play.
    </string>
    <string name="match_start_wording_double_team">
        Ladies and gentlemen: on my right %s, represented by %s and %s, and on my left %s, represented by %s and %s.
        %s to serve to %s. Love all.
        Play.
    </string>
    <string name="plus_one">+1</string>
    <string name="serve_change">Service over.</string>
    <string name="break_set_mid">Interval.</string>
    <string name="both">all.</string>
    <string name="setpoint">game point</string>
    <string name="matchpoint">match point</string>
    <string name="undo">Undo</string>
    <string name="and">and</string>
    <string name="win_wording_non_team">Game. Match won by %s %s.</string>
    <string name="win_wording_given_up">%s surrendered.</string>
    <string name="win_wording_disqualification">%s was disqualified.</string>
    <string name="set_end">Game. %s game won by %s %s.</string>
    <string name="set_end_equal_one">Game. %s game won by %s %s. One game all.</string>
    <string name="set_end_equal_two">Game. %s game won by %s %s. Two games all.</string>
    <string name="set_start">%s game. Love all. Play.</string>
    <string name="last_set_start">Final game. Love all. Play.</string>
    <string name="seconds_left">seconds remaining.</string>
    <string name="click_for_start">Click for start.</string>
    <string name="start_soon_announce">Court %d 20 seconds. Court %d 20 seconds.</string>
    <string name="please_choose_serve_accept">For starting the new set please select server and receiver.</string>
    <string name="announce_after_set_middle_break">%s. Play.</string>
    <string name="load_existing_match">Load saved game</string>
    <string name="exceptional_event">Incident</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="warning">%s warning because of unsportsmanlike behavior.</string>
    <string name="warning_error">%s fault because of unsportsmanlike behavior.</string>
    <string name="eleven_points">11 points - 5 matches</string>
    <string name="twentyone_points">21 points - 3 matches</string>
    <string name="new_match">New Match</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
</resources>
