<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#202020">
    <Button
            android:text="@string/start_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/start_match"
            app:layout_constraintEnd_toEndOf="@+id/player3"
            app:layout_constraintTop_toBottomOf="@+id/player3"
            android:background="#515151" android:textColor="#BCBCBC" android:textSize="20sp"
            android:layout_marginTop="140dp" app:layout_constraintStart_toStartOf="@+id/player3"/>
    <Button
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/load_match"
            app:layout_constraintEnd_toEndOf="@+id/player3"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/start_match"
            android:background="#515151"
            android:textColor="#BCBCBC"
            android:textSize="20sp" android:visibility="invisible" app:layout_constraintStart_toStartOf="@+id/player3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/player_1"
            android:ems="10"
            android:id="@+id/player1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:text="Alan"
            android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/player_2"
            android:ems="10"
            android:id="@+id/player2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/player1"
            android:visibility="invisible" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:text="Berta"
            android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/team"
            android:ems="10"
            android:id="@+id/teamA_name"
            app:layout_constraintTop_toBottomOf="@+id/player2"
            android:visibility="invisible" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:text="1. A"
            android:textSize="20sp" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/player_1"
            android:ems="10"
            android:id="@+id/player3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp" android:text="Charlie" android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/player_2"
            android:ems="10"
            android:id="@+id/player4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/player3"
            android:visibility="invisible" android:text="Dan" android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/team"
            android:ems="10"
            android:id="@+id/teamB_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@+id/player4"
            android:visibility="invisible" android:text="1. B" android:textSize="20sp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/vsText"
            app:layout_constraintStart_toEndOf="@+id/player2" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toStartOf="@+id/player4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="47dp" android:textColor="#BCBCBC" android:textSize="20sp"/>
    <!-- Usage of Switch is okm here, as we are using Android API version 14+-->
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Switch_Single_Double"
            app:layout_constraintStart_toStartOf="@+id/player1" app:layout_constraintTop_toBottomOf="@+id/player1"
            android:textColor="#BCBCBC" android:textSize="20sp"
            android:layout_marginTop="140dp"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            app:layout_constraintEnd_toEndOf="@+id/player1"
            android:text="@string/single"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Switch_Tournament_Team"
            app:layout_constraintStart_toStartOf="@+id/player1"
            app:layout_constraintTop_toBottomOf="@+id/Switch_Single_Double"
            android:layout_marginTop="10dp" android:textColor="#BCBCBC" android:textSize="20sp"
            android:text="@string/tournament_game" tools:ignore="UseSwitchCompatOrMaterialXml"
            app:layout_constraintEnd_toEndOf="@+id/player1"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Switch_Counting"
            app:layout_constraintStart_toStartOf="@+id/player1"
            android:textColor="#BCBCBC" android:textSize="20sp"
            android:text="@string/twentyone_points" tools:ignore="UseSwitchCompatOrMaterialXml"
            app:layout_constraintEnd_toEndOf="@+id/player1"
            app:layout_constraintTop_toBottomOf="@+id/Switch_Tournament_Team" android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>