<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#202020">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:text="@string/takes_left"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamASideLeft"
                    android:visibility="invisible" android:background="#515151" android:textColor="#BCBCBC"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamASide" android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="25dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/status_header"
                    android:textColor="#BCBCBC" android:textSize="12sp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp" android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:text="@string/takes_serve"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamAPlayer1Serve"
                    android:visibility="invisible"
                    android:background="#515151" android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamAPlayer1"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="25dp"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/serveTeamBPlayer1"
                    android:visibility="invisible" android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/randomize"
                    app:layout_constraintStart_toEndOf="@+id/teamBPlayer1Serve"
                    app:layout_constraintEnd_toStartOf="@+id/teamBPlayer1Accept"/>
            <Button
                    android:text="@string/takes_accept"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBPlayer1Accept"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamBPlayer1"
                    android:layout_marginTop="10dp" android:layout_marginEnd="25dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/serveTeamAPlayer2"
                    android:visibility="invisible"
                    android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamAPlayer1Serve"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamAPlayer2Serve"
                    app:layout_constraintEnd_toStartOf="@+id/teamAPlayer2Accept"/>
            <Button
                    android:layout_width="99dp"
                    android:layout_height="66dp" android:id="@+id/undo_serve"
                    android:text="@string/undo"
                    android:textColor="#BCBCBC"
                    android:background="#515151" android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>
            <Button
                    android:text="@string/takes_accept"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBPlayer2Accept"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamBPlayer2"
                    android:layout_marginTop="10dp" android:layout_marginEnd="25dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:text="@string/takes_serve"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBPlayer1Serve"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamBPlayer1"
                    android:layout_marginTop="10dp" app:layout_constraintEnd_toStartOf="@+id/teamBPlayer1Accept"
                    android:layout_marginEnd="10dp"/>
            <Button
                    android:text="@string/takes_left"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBSideLeft"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamBSide"
                    android:layout_marginTop="10dp" app:layout_constraintEnd_toStartOf="@+id/teamBSideRight"
                    android:layout_marginEnd="10dp"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/teamASide"
                    android:visibility="invisible"
                    android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamAPlayer2Serve"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamASideLeft"
                    app:layout_constraintEnd_toStartOf="@+id/teamASideRight"/>
            <Button
                    android:text="@string/takes_accept"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamAPlayer2Accept"
                    android:visibility="invisible" android:background="#515151" android:textColor="#BCBCBC"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamAPlayer2"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamAPlayer2Serve"
                    android:layout_marginStart="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/vsHeader"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp" android:id="@+id/randomize"
                    android:text="@string/coinflip"
                    android:textColor="#BCBCBC"
                    android:background="#515151" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/vsHeader"
                    android:layout_marginTop="10dp"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/takes_right"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBSideRight"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamBSide"
                    android:layout_marginTop="10dp" android:layout_marginEnd="25dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/serveTeamAPlayer1"
                    android:visibility="invisible" android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/randomize"
                    app:layout_constraintStart_toEndOf="@+id/teamAPlayer1Serve"
                    app:layout_constraintEnd_toStartOf="@+id/teamAPlayer1Accept"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/teamBSide"
                    android:visibility="invisible"
                    android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamBPlayer2Serve"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamBSideLeft"
                    app:layout_constraintEnd_toStartOf="@+id/teamBSideRight"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/serveTeamBPlayer2"
                    android:visibility="invisible"
                    android:textColor="#BCBCBC" android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamBPlayer1Serve"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamBPlayer2Serve"
                    app:layout_constraintEnd_toStartOf="@+id/teamBPlayer2Accept"/>
            <Button
                    android:text="@string/takes_serve"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamAPlayer2Serve"
                    android:visibility="invisible"
                    android:background="#515151" android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamAPlayer2"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="25dp"/>
            <Button
                    android:text="@string/takes_right"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamASideRight"
                    android:visibility="invisible" android:background="#515151" android:textColor="#BCBCBC"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/teamASide"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamASideLeft"
                    android:layout_marginStart="10dp"/>
            <Button
                    android:text="@string/takes_accept"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamAPlayer1Accept"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamAPlayer1"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toEndOf="@+id/teamAPlayer1Serve"
                    android:layout_marginStart="10dp"/>
            <Button
                    android:text="@string/takes_serve"
                    android:layout_width="150dp"
                    android:layout_height="40dp" android:id="@+id/teamBPlayer2Serve"
                    android:visibility="invisible" android:background="#515151"
                    android:textColor="#BCBCBC" android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/serveTeamBPlayer2"
                    android:layout_marginTop="10dp" app:layout_constraintEnd_toStartOf="@+id/teamBPlayer2Accept"
                    android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Team A Selection Matrix -->

    <!-- Team B Selection Matrix -->


</androidx.constraintlayout.widget.ConstraintLayout>